force-app/main/default/objects/vlocity_cmt__FieldsConfiguration__c/vlocity_cmt__FieldsConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for defining the configuration for the fields in UI</description>
    <label>FieldsConfiguration</label>
</CustomObject>