force-app/main/default/objects/vlocity_cmt__FieldsConfiguration__c/fields/vlocity_cmt__Feature__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Feature__c</fullName>
    <description>Defines which feature i.e. Application or Omni.</description>
    <label>Feature</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>