force-app/main/default/objects/vlocity_cmt__FieldsConfiguration__c/fields/vlocity_cmt__FieldSetName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__FieldSetName__c</fullName>
    <label>FieldSet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>